--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
+	"presets": ["@babel/preset-env", ["@babel/preset-react", { "runtime": "automatic" }]],
 	"plugins": [
 		[
 			"babel-plugin-styled-components",
 			{
-				"displayName": true
+				"displayName": true,
+				"fileName": false,
+				"namespace": "loopstudios"
 			}
 		]
 	]
