--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
 		"@types/node": "^16.11.31",
 		"@types/react": "^18.0.8",
 		"@types/react-dom": "^18.0.0",
+		"@types/styled-components": "^5.1.25",
+		"babel-plugin-styled-components": "^2.0.7",
+		"customize-cra": "^1.0.0",
 		"react": "^18.1.0",
+		"react-app-rewired": "^2.2.1",
+		"react-app-rewired-esbuild": "^0.0.10",
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
@@ -35,10 +40,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"@types/styled-components": "^5.1.25",
-		"babel-plugin-styled-components": "^2.0.7",
-		"react-app-rewired": "^2.2.1"
 	}
 }
